<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

  <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="52dp"
      android:text="@string/app_title"
      app:layout_constraintBottom_toTopOf="@+id/imageView3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.777" />

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="234dp"
      android:layout_height="224dp"
      android:layout_marginBottom="16dp"
      android:contentDescription="@string/image_desc"
      app:layout_constraintBottom_toTopOf="@+id/hero_desc"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      tools:src="@drawable/dota2"/>

  <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="38dp"
      android:layout_marginLeft="38dp"
      android:layout_marginTop="36dp"
      android:background="@android:color/holo_red_dark"
      android:text="@string/str"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/hero_desc" />

  <Button
      android:id="@+id/button3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="36dp"
      android:layout_marginEnd="44dp"
      android:layout_marginRight="44dp"
      android:background="@android:color/holo_blue_dark"
      android:text="@string/intl"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/hero_desc" />

  <Button
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="100dp"
      android:background="@android:color/holo_green_dark"
      android:text="@string/agi"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/hero_desc" />

  <Switch
      android:id="@+id/switch1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/switch_text"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/hero_desc"
      android:layout_width="321dp"
      android:layout_height="99dp"
      android:layout_marginBottom="160dp"
      android:text="@string/hero_desc"
      app:layout_constraintBottom_toTopOf="@+id/switch1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
